--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+NEXT
+    * Fix diag + note argument joining
+
 1.301001_102
     * New release per perl-qa group request for hackathon
     * Add unmunge and unlisten
