--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 NEXT:
     * Fix manual fork warning
+    * Performance enhancements
+    * Delay load Test::Builder with Test::More and Test::Simple
 
 1.301001_103
     * Fix diag + note argument joining
