Details of things Test::Stream Breaks
 * Update list of broken modules
 * Add breakage causes to Transition.pod

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+Next:
+    * Update list of known broken downstream modules
+
 1.301001_104:
     * Fix manual fork warning
     * Performance enhancements
