Account for monkeypatching that does not call original
Test-LectroTest monkeypatches ok such that it returns a boolean and does
NOT call the original method. This breaks some expectations, but is a
perfectly reasonable pre-stream monkeypatch behavior.

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Next:
     * Update list of known broken downstream modules
     * Fix untriggered Srream/Exporter bug
     * Faster OK-TAP generation
+    * Allow monkeypatching that does not call original
 
 1.301001_104:
     * Fix manual fork warning
