--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+NEXT:
+    * Add hooks for event initialization
+
 1.301001_105:
     * Update list of known broken downstream modules
     * Fix untriggered Srream/Exporter bug
