Fix win32 forking/threading
c38a9b8 assumed that pid's and tids would always be purely numerical,
and positive integers. On windows they can be prefixed with a '-', and
other platforms who knows. This commit removes all assumptions about
what a pid/tid looks like, while still accomplishing the original goal
of seeking only files with the current tid/pid

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+1.301001_107:
+    * Fix broken threadinf/forking on win32 introduced in _106
+
 1.301001_106:
     * Allow subtests to take a pre-constructed block object  (API Shortcut)
     * Replace suprising fork in subtest behavior with unsuprising one  (Better behavior before new stuff is official)
