--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 1.301001_107:
     * Fix broken threading/forking on win32 introduced in _106
+    * Make sure ALL tests run for older perls
 
 1.301001_106:
     * Allow subtests to take a pre-constructed block object  (API Shortcut)
