Correct and define Subtest+Fork behavior
 * Add support for alternative concurrency drivers
 * Define how subtest swork with forking
 * Define concurrency behavior

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+NEXT:
+    * Allow alternative concurrency models/drivers
+
 1.301001_108:
     * Rename some subtest implementation details to private subs
     * No logic or functionality changes, just hiding some methods before release
