--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+1.301001_108:
+    * Rename some subtest implementation details to private subs
+    * No logic or functionality changes, just hiding some methods before release
+
 1.301001_107:
     * Fix broken threading/forking on win32 introduced in _106
     * Make sure ALL tests run for older perls
