--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 NEXT:
     * Allow alternative concurrency models/drivers
+    * Define, document, and implement sane concurrency behavior
+    * Add 'Exception' event
+    * Add concurrency demos
 
 1.301001_108:
     * Rename some subtest implementation details to private subs
