--- a/README
+++ b/README
@@ -1,1 +1,33 @@
-This is an experimental replacement for Test-Simple
+NAME
+    Test::Stream - Experimental successor to Test::Builder
+
+EXPERIMENTAL CODE WARNING
+    This is an experimental release! Test-Stream, and all its components are
+    still in an experimental phase. This dist has been released to cpan in
+    order to allow testers and early adopters the chance to write
+    experimental new tools with it, or to add experimental support for it
+    into old tools.
+
+    PLEASE DO NOT COMPLETELY CONVERT OLD TOOLS YET. This experimental
+    release is very likely to see a lot of code churn. API's may break at
+    any time. Test-Stream should NOT be depended on by any toolchain level
+    tools until the experimental phase is over.
+
+SOURCE
+    The source code repository for Test::Stream can be found at
+    http://github.com/Test-More/Test-Stream/.
+
+MAINTAINERS
+    Chad Granum <exodist@cpan.org>
+
+AUTHORS
+    Chad Granum <exodist@cpan.org>
+
+COPYRIGHT
+    Copyright 2015 Chad Granum <exodist7@gmail.com>.
+
+    This program is free software; you can redistribute it and/or modify it
+    under the same terms as Perl itself.
+
+    See http://www.perl.com/perl/misc/Artistic.html
+
