Improve export aliasing syntax
This makes the internal exporter use the same syntax as
Exporter::Declare and Sub::Exporter when it comes ot renaming imports.

I worked on this over the weekend and forgot to commit it :-/

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Change import aliasing syntax to match prior art
+
 1.302008  2015-06-27 15:21:55-07:00 America/Los_Angeles
 
     - Fix 2 bugs with threading on 5.8.x
