--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 {{$NEXT}}
 
+    - Fix MANIFEST.SKIP so tests are not skipped
     - Change import aliasing syntax to match prior art
+    - Fix bug in does_ok
+    - Documentation updates
 
 1.302008  2015-06-27 15:21:55-07:00 America/Los_Angeles
 
