--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-NEXT
+1.302007_004 Mon Jul 27 21:13:39:00 PST 2015
     * Work around perlbug 125702
 
 1.302007_003 Mon Jul 24 08:34:46:00 PST 2015
